--- a/index.html
+++ b/index.html
@@ -1,13 +1,43 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>CHANGE ME</title>
+    <title>Daseanwebby</title>
   </head>
 
   <body>
-    <!-- All content goes here -->
+    <!-- All content go -->
     <div id="all-contents">
+      <nav> 
+
+      </nav>
       
-    </div>
-  </body>
-</html>
+      <main>
+        <!--Sidebar section -->
+        <div class="sidebar">
+
+        </div>
+  
+         <!--content section -->
+        <div class="content">
+         <h2> Halle Bot </h2>
+         <p> Mascot at Operation Park</p>  
+        </div>
+
+      </main>
+
+      <!-- Interests section -->
+  <div id="interests">
+    <h3>Interests</h3>
+    <ul>
+      <li>Coding</li>
+      <li>Running</li>
+      <li>Baking Cupcakes</li>
+    </ul>
+  </div>
+</div>
+  
+       
+  
+
+
+
