add protfolio page to website

--- a/portfolio.html
+++ b/portfolio.html
@@ -1,17 +1,46 @@
-Table of Contents
-Prerequisites
-Overview
-Specs
-Type of App
-Lesson Steps
-Work Flow
-TODO 0 : Preview Your Site
-TODO 1: Create Portfolio Page
-TODO 2: Add a Title
-TODO 3: Create Sections for the Menu and Main Content
-TODO 4: Navigation and Site Title
-TODO 5: Create Section for Main Content
-TODO 6: Add Links for Projects
-TODO 7: Add CSS
-Extra CSS Challenges
-TODO 8: Go Live
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>CHANGE ME</title>
+  </head>
+
+  <body>
+    <!-- All content goes here -->
+    <div id="all-contents">
+       <nav>
+   <h1>sean Amazing Website</h1>
+  <ul id="nav-ul">
+    <li class="nav-li">
+      <a href="index.html">Home</a>
+    </li>
+    <li class="nav-li">
+      <a href="portfolio.html">Portfolio</a>
+    </li>
+  </ul>
+  </nav>
+
+  <main>
+   <main>
+  <div class="content">
+    <h1>Portfolio</h1>
+    <ul id="portfolio">
+
+    </ul>
+  </div>
+</main>
+  </main>
+    </div>
+  </body>
+</html>
+<head>
+  <title> dasean /title>
+</head>
+<li>
+  <a href="fsd-projects/platformer/">Platformer: A cannon-dodging adventure game for Halleb0t</a>
+</li>
+<li>
+  <a href="fsd-projects/bouncing-box/">Bouncing Box: A fun introduction to web game development</a>
+</li>
+<li>
+  <a href="fsd-projects/circularity/">Circularity: A poetic motion experiment with circles</a>
+</li>
