--- a/portfolio.html
+++ b/portfolio.html
@@ -2,6 +2,8 @@
 <html>
   <head>
     <title>dasean</title>
+    <link rel="stylesheet"
+    href="style.css" />
   </head>
 
   <body>
@@ -19,22 +21,10 @@
   </ul>
   </nav>
 
-  <main>
    <main>
   <div class="content">
     <h1>Portfolio</h1>
     <ul id="portfolio">
-
-    </ul>
-  </div>
-</main>
-  </main>
-    </div>
-  </body>
-</html>
-<head>
-  <title> dasean /title>
-</head>
 <li>
   <a href="fsd-projects/platformer/">Platformer: A cannon-dodging adventure game for Halleb0t</a>
 </li>
@@ -44,77 +34,9 @@
 <li>
   <a href="fsd-projects/circularity/">Circularity: A poetic motion experiment with circles</a>
 </li>
- /* Portfolio styles */
-.content h1 {
-  color: black;
-}
-
-#portfolio {
-  list-style-type: none;
-  padding-left: 0;
-}
-
-#portfolio li {
-  background: #fff;
-  padding: 10px;
-  border-radius: 10px;
-  margin-bottom: 10px;
-}
-
-#portfolio li:hover {
-  background: #eee;
-}
-
-#portfolio a {
-  text-decoration: none;
-  color: #454545;
-}
-/* responsive web design */
-@media screen and (min-width: 120px) and (max-width: 1080px) {
-  main {
-    height: 100ch;
-    zoom: 1.5;
-    display: grid;
-  }
-
-  h1 {
-    font-size: 44px;
-  }
-
-  h2 {
-    font-size: 42px;
-  }
-
-  h3 {
-    font-size: 36px;
-  }
-
-  #all-contents {
-    height: 100ch;
-    margin: none;
-  }
-
-  a {
-    font-size: 42px;
-  }
-
-  .sidebar {
-    margin-right: 0px;
-    justify-content: center;
-    align-items: center;
-  }
-
-  .sidebar-img {
-    width: 100%;
-  }
-
-  p,
-  li {
-    font-size: 24px;
-  }
-
-  .content {
-    align-content: center;
-    justify-content: center;
-  }
-}
+    </ul>
+  </div>
+  </main>
+    </div>
+  </body>
+</html>
